--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ border-radius: 4px 0 0 0 4px;
     font-size: large;
     text-align: center;
     border-radius: .5em;
+    cursor: pointer;
 
 }
 
